<resources>
    <string name="app_name" translatable="false">BoozeR</string>
    <string name="btnGoRegister">Sign Up</string>
    <string name="btnGoLogin">Login</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">password</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Repeat password</string>
    <string name="btnCancel">Cancel</string>
    <string name="toast_login_error">An error has occurred</string>
    <string name="toast_login_cancelled">Login cancelled</string>
    <string name="toast_register_cancelled">Register cancelled</string>
    <string-array name="spinner_types">
        <item>Cualquiera</item>
        <item>Aguardiente</item>
        <item>Anís</item>
        <item>Brandy</item>
        <item>Cerveza</item>
        <item>Champagne</item>
        <item>Ginebra</item>
        <item>Licor</item>
        <item>Pulke</item>
        <item>Ron</item>
        <item>Sake</item>
        <item>Sidra</item>
        <item>Tequila</item>
        <item>Vino</item>
        <item>Vodka</item>
        <item>Whisky</item>
    </string-array>
    <string name="toast_error_empty">Please, fill out the form...</string>
    <string name="toast_error_password">Passwords don\'t match</string>
    <string name="toast_error_password_length">Password must be at least six characters long</string>
    <string name="toast_error_email">Email address is invalid</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_profile">Profile</string>
    <string name="btnDeleteAccount">Delete Account</string>
    <string name="btnConfirmDeleteAccount">Yes, delete my account</string>
    <string name="AlertDeleteAccount">Are you sure? This cannot be undone</string>
    <string name="toast_account_deleted">Your account has been succesfully deleted</string>
    <string name="hint_height">Height (cm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="user">User:</string>
    <string name="email" translatable="false">Email:</string>
    <string name="preferences">Preferences:</string>
    <string name="hint_vol" translatable="false">Vol. (%)</string>
    <string name="hint_quantity">Quantity (ml)</string>
    <string name="btnCalculate">Calculate</string>
    <string name="fragment_percentage">"Blood alcohol level: "</string>
    <string name="fragment_percentage_number" translatable="false">0%</string>
    <string name="radio_man">Man</string>
    <string name="radio_woman">Woman</string>
    <string name="btnReset">Reset</string>
    <string name="warning_drive_new">If you are a driver in your first two years of license, do not drive</string>
    <string name="warning_drive">Don\'t drive</string>
    <string name="warning_nausea">You might feel like vomiting. Please don\'t do anything stupid</string>
    <string name="warning_blackout">If you haven\'t puked yet, you will. You should go home, tomorrow\'s going to be tough</string>
    <string name="warning_stupor">If you can read this, stop drinking</string>
    <string name="warning_coma">Do NOT drink anymore. You might have an ethilic coma</string>
    <string name="warning_rip">If you had drink that much, you would be dead</string>
    <string name="btn_edit_account">Edit account</string>
    <string name="btnConfirm">Accept</string>
    <string name="toast_account_updated">Your account has been successfully edited</string>
    <string name="btnApply">Apply</string>
    <string name="alertMaxVol" translatable="false">Max: 100%</string>
    <string name="alertMaxPrice">Max: 100,00 €/l</string>
    <string name="noFavInfo">It seems that you don\'t have favorite drinks...</string>
    <string name="search">Search drinks</string>
    <string name="emptySearchInfo">No drinks were found</string>
</resources>
